0.6.13  UNRELEASED

 BUG FIXES

  * "Support" empty repositories; print an appropriate error.
    (Jelmer Vernooij, #1219424)

  * Fix compatibility with and depend on dulwich 0.9.6. (William Grant)

  * Correctly handle all moves when converting bzr trees to git.
    (William Grant, #818318)

  * Fix compatibility with dulwich 0.14. (Jelmer Vernooij)

 FEATURES

  * Mark bzr 2.7 as supported.

  * Support 'HG:rename-source' fields.

  * Support HG extra 'amend_source'.

0.6.12  2013-09-22

 FEATURES

  * Support thin packs when pushing and fetching to/from remote
    repositories. (William Grant, #878085)

 CHANGES

  * Fix compatibility with and depend on dulwich 0.9.1. (Jelmer Vernooij)

0.6.11	2013-08-04

 BUG FIXES

  * Add support for Bazaar 2.6.0. (Jelmer Vernooij)

0.6.10	2012-12-13

 FEATURES

  * New command 'bzr git-push-pristine-tar', which pushes pristine tar deltas
    to a git repository. (Jelmer Vernooij)

 BUG FIXES

  * Implement ``GitRevisionTree.is_executable``. (Jelmer Vernooij)

0.6.9	2012-05-29

 BUG FIXES

  * ``bzr git-import`` only creates colocated branches now if
    the --colocated option is specified. (Jelmer Vernooij)

  * Convert `~` to `_` when pushing into git, as `~` is not allowed in
    refs. (Jelmer Vernooij)

  * Support optional timeout argument to ``bzr serve --git``.
    (Jelmer Vernooij)

  * Handle encoding better in working tree iter changes.
    (Jelmer Vernooij, #1019978)

0.6.8	2012-03-28

 BUG FIXES

  * Fixes duplicate tag warnings in 'git-remote-bzr' helper.
    (Jelmer Vernooij, #905275)

  * Don't suggest development-subtree when submodules are encountered.
    (Jelmer Vernooij, #951494)

  * Print proper error when encountering data that can't be roundtripped.
    (Jelmer Vernooij)

  * Ignore control directory filenames on Windows, too.
    (Jelmer Vernooij, #967054)

  * Fix 'Unable to obtain lock' error when dpushing from a bound branch.
    (Jelmer Vernooij, #949557)
